add git maven release plugin

--- a/eclipse/plugins/pom.xml
+++ b/eclipse/plugins/pom.xml
@@ -164,7 +164,25 @@
 					</execution>
 				</executions>
 			</plugin>
-		</plugins>
+		      <plugin>
+			<groupId>external.atlassian.jgitflow</groupId>
+			<artifactId>jgitflow-maven-plugin</artifactId>
+			<version>1.0-m5.1</version>
+			<configuration>
+			    <flowInitContext>
+				<masterBranchName>master</masterBranchName>
+				<developBranchName>master</developBranchName>
+				<featureBranchPrefix>feature-</featureBranchPrefix>
+				<releaseBranchPrefix>release-</releaseBranchPrefix>
+				<hotfixBranchPrefix>hotfix-</hotfixBranchPrefix>
+				<versionTagPrefix>version-</versionTagPrefix>
+			    </flowInitContext>
+			    <noDeploy>true</noDeploy>
+			    <squash>true</squash>
+			    <scmCommentPrefix>[RELEASE] </scmCommentPrefix>
+			</configuration>
+		    </plugin>
+		  </plugins>
 	</build>
 
 	<modules>
