--- a/eclipse/plugins/pom.xml
+++ b/eclipse/plugins/pom.xml
@@ -171,7 +171,7 @@
 			<configuration>
 			    <flowInitContext>
 				<masterBranchName>master</masterBranchName>
-				<developBranchName>master</developBranchName>
+				<developBranchName>development</developBranchName>
 				<featureBranchPrefix>feature-</featureBranchPrefix>
 				<releaseBranchPrefix>release-</releaseBranchPrefix>
 				<hotfixBranchPrefix>hotfix-</hotfixBranchPrefix>
