--- a/eclipse/plugins/net.sf.orcc.cal.tests/pom.xml
+++ b/eclipse/plugins/net.sf.orcc.cal.tests/pom.xml
@@ -2,12 +2,12 @@
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>net.sf.orcc.cal.tests</artifactId>
 	<packaging>eclipse-plugin</packaging>
-	<version>2.4.0-SNAPSHOT</version>
+	<version>2.4.0</version>
 
 	<parent>
 		<groupId>net.sf.orcc</groupId>
 		<artifactId>net.sf.orcc</artifactId>
-		<version>0.0.1-SNAPSHOT</version>
+		<version>0.0.1</version>
 	</parent>
 	
 </project>
