--- a/eclipse/plugins/net.sf.orcc.site/pom.xml
+++ b/eclipse/plugins/net.sf.orcc.site/pom.xml
@@ -2,11 +2,11 @@
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>net.sf.orcc.site</artifactId>
 	<packaging>eclipse-repository</packaging>
-	<version>2.4.0-SNAPSHOT</version>
+	<version>2.4.0</version>
 	<parent>
 		<groupId>net.sf.orcc</groupId>
 		<artifactId>net.sf.orcc</artifactId>
-		<version>0.0.1-SNAPSHOT</version>
+		<version>0.0.1</version>
 	</parent>
 	<build>
 		<plugins>
