--- a/eclipse/plugins/pom.xml
+++ b/eclipse/plugins/pom.xml
@@ -3,7 +3,7 @@
 	<name>net.sf.orcc</name>
 	<groupId>net.sf.orcc</groupId>
 	<artifactId>net.sf.orcc</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.1</version>
 	<packaging>pom</packaging>
 	
 	<properties>
